KOGITO-3102 - refactored type handling in explainability-core (#395)
* KOGITO-3102 - refactored type handling in explainability-core

* KOGITO-3102 - minor fixes

* KOGITO-3102 - restored wrongly suppressed numeric encoding, Sonar suggested fixes

* KOGITO-3102 - Sonar suggested fixes

* KOGITO-3102 - better test coverage, minor fixes

* KOGITO-3102 - resolved review comments

* KOGITO-3102 - resolved review comments

* Update pom.xml

* Update DataUtils.java

* Update ExplainabilityMetrics.java

Co-authored-by: Daniele Zonca <dzonca@redhat.com>